--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -649,9 +649,17 @@
                 }
               }
             }           
-          }                  
+          }
+          
+          
         }
       }
     }
+  }
+}
+
+::ng-deep .checkbox-custom-label.gray-checkbox{
+  &::before{
+    background-color: gainsboro !important;
   }
 }
