--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -893,6 +893,7 @@ and open the template in the editor.
         .checkbox-custom-label{
             padding-left: 0;
             padding-right: 6px;
+            padding-top: 3px;
             &::after{
                 display: none;
             }
