--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.html
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.html
@@ -52,8 +52,8 @@
                     <img class="custom-dropdown-toggle-icon" src="assets/icons/Vector.svg">
                 </button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li *ngFor="let status of dynamicStatus"><span
-                      class="list-name"  (click)="selectedTab(status);statusFilter.close()">{{status|titlecase}}</span><img class="hide" src="assets/icons/check-blue.svg"></li>
+                  <li *ngFor="let status of dynamicStatus" (click)="selectedTab(status);statusFilter.close()"><span
+                      class="list-name">{{status|titlecase}}</span><img [ngClass]="{'hide': status !== setTab}" src="assets/icons/check-blue.svg"></li>
                 </ul>
               </div>
             </div>
@@ -157,7 +157,7 @@
                         (click)="runExperiment(exp._id, 'active', $event)">
                         Run
                       </button>
-                      <span (click)="addExperiment('edit', exp)" style="padding-left: 2px; font-size: 10px"
+                      <span (click)="addExperiment('edit', exp)" style="padding-left: 2px; font-size: 9px"
                         *ngIf="!status_active">View search configuration</span>
                     </div>
                   </div>
