--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -157,6 +157,7 @@
               font-size: 14px;
               line-height: 17px;
               padding-left: 30px;
+              word-break: break-all;
             }
             .variants {
               display: flex;
@@ -256,7 +257,7 @@
             .hours {
               color: #202124;
               font-weight: normal;
-              font-size: 10px;
+              font-size: 9px;
               line-height: 12px;
               margin-bottom: 4px;
             }
@@ -395,6 +396,7 @@
                 font-weight: 500;
                 font-size: 12px;
                 line-height: 21px;
+                flex-shrink: inherit;
               }
               .name {
                 color: #202124;
@@ -402,6 +404,7 @@
                 font-size: 14px;
                 line-height: 17px;
                 margin-left: 10px;
+                word-break: break-all;
               }
             }
             .title {
