--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -25,6 +25,7 @@
         </div> -->
         <div class="actions text-right">
             <!-- <button id='btn_addFacet' class="kr-sg-button-primary btn_lg" (click)="createNewFacet()">{{'facets.add_facet'| translate}}</button> -->
+            <span class="selected_count mr-4" *ngIf="selcectionObj && selcectionObj.selectedCount">{{selcectionObj.selectedCount}} {{'facets.selected' | translate}}</span>
             <button id='btn_cancleFacet' ng class="kr-sg-button-secondary btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="addRemovefacetFromSelection(null,null,true)">{{'facets.deselect'| translate}}</button>
             <button id='btn_delete' class="kr-sg-button-danger btn_lg" *ngIf="selcectionObj && selcectionObj.selectedCount" (click)="deleteFacets(null,true)">{{'facets.delete_facets'| translate}}</button>
             <!-- <img src="assets/icons/clock.svg"> -->
@@ -51,11 +52,11 @@
     <div class="table_section" *ngIf="(facets && facets.length)">
         <div class="header_sec row m-0">
             <div class="col-4 content withcheckbox">
-                <div class="kr-sg-checkbox p-0 ml-1 mb-0 pl-5 select-all-checkbox">
+                <div class="kr-sg-checkbox p-0 ml-1 mb-0 select-all-checkbox adjust-checkbox-padding">
                     <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"  [(ngModel)]="selcectionObj.selectAll">
                     <label for="selectAllFacets" class="checkbox-custom-label"></label>
                 </div>
-                <div class="kr-sg-checkbox p-0 m-0 pl-5 partial-select-checkbox d-none" *ngIf="selcectionObj.selectedItems.length != facets.length">
+                <div class="kr-sg-checkbox p-0 ml-1 mb-0 adjust-checkbox-padding partial-select-checkbox d-none" *ngIf="selcectionObj.selectedItems.length != facets.length">
                     <img (click) = "selectAllFromPartial()" src="assets/icons/resultranking/selected-checkbox.svg" class="search-icon">
                 </div> 
                 <span class="d-flex align-items-center flex-column mr-1 selectall-title" (click)="sortBy('name')">
@@ -157,7 +158,7 @@
                 <div class="body_sec row m-0" cdkDrag *ngFor="let facet of facets | filter : [searchfacet, 'facetName']" [ngClass]="{'selected': (selcectionObj && selcectionObj.selectedItems && selcectionObj.selectedItems[facet._id])}">
                     <div class="col-4 content withcheckbox">
                         <div class="drag_drop_icon pl-2"><img src="assets/icons/drog_drop.svg"></div>
-                        <div class="kr-sg-checkbox p-0 m-0 pl-5">
+                        <div class="kr-sg-checkbox p-0 m-0 adjust-checkbox-padding">
                             <input id="{{facet._id}}" class="checkbox-custom selectEachfacetInput" (change)="checkUncheckfacets(facet)" type="checkbox">
                             <label for="{{facet._id}}" class="checkbox-custom-label"></label>
                         </div>
@@ -222,18 +223,18 @@
                         <img src="assets/images/search_gray.svg" class="search-icon">     
                             <ul class="dropdown-menu content-menu">
                                 <perfect-scrollbar class="scroll-search-field">
-                                    <li *ngFor="let suggesition of fieldAutoSuggestion" (click)="selectField(suggesition)"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
+                                    <li *ngFor="let suggesition of fieldAutoSuggestion" (click)="selectField(suggesition); setFaceName(suggesition)"><a *ngIf="suggesition && suggesition.fieldName">{{suggesition.fieldName}}</a></li>
                                 </perfect-scrollbar>
                             </ul>                                                                       
                     </div>                        
                 </div>
-                    <div class="col-2 pr-0" *ngIf="!addEditFacetObj._id &&  selectedField && selectedField.fieldDataType && filedTypeShow">
+                    <div class="col-2 pr-0 pl-2" *ngIf="!addEditFacetObj._id &&  selectedField && selectedField.fieldDataType && filedTypeShow">
                         <div class="title">{{'facets.field_type :'| translate}}<span class="string">{{selectedField.fieldDataType | translate}}</span></div>
                     </div>
-                    <div class="col-2 pr-0" *ngIf="addEditFacetObj._id && addEditFacetObj.fieldDataType && filedTypeShow" >
+                    <div class="col-2 pr-0 pl-2" *ngIf="addEditFacetObj._id && addEditFacetObj.fieldDataType && filedTypeShow" >
                         <div class="title">{{'facets.field_type :'| translate}}<span class="string">{{addEditFacetObj.fieldDataType | translate}}</span></div>
                     </div>
-                    <div class="col-2 pr-0" *ngIf="addEditFacetObj._id &&  selectedField && selectedField.fieldDataType && filedTypeShow">
+                    <div class="col-2 pr-0 pl-2" *ngIf="addEditFacetObj._id &&  selectedField && selectedField.fieldDataType && filedTypeShow">
                         <div class="title">{{'facets.field_type :'| translate}}<span class="string">{{selectedField.fieldDataType | translate}}</span></div>
                     </div>
             </div>
