--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -155,6 +155,10 @@
     }
   }
   .actions {
+    .selected_count{
+      color: #5F6368;
+      font-size: 14px;
+    }
     button {
       margin-right: 12px;
     }
@@ -653,5 +657,10 @@
       .type_sort_dropdown .dropdown-open .dropdown-input img{
         top: unset;
       }       
+  }
+}
+.kr-sg-checkbox{
+  &.adjust-checkbox-padding {
+    padding-left: 40px !important;
   }
 }
