--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -1,7 +1,8 @@
 <div class="emptyStateContainer" aria-live="polite">
   <perfect-scrollbar class="dashboard-perfect-scroll">
   <div class="scrollContainer">
-    <div *ngIf="!(apps && apps.length)">
+    <!-- <div *ngIf="!(apps && apps.length)"> -->
+    <div *ngIf="emptyApp">
       <div class="empty-state-wrap">
         <div aria-hidden="true" class="col-6 empty-image">
           <img src="assets/images/noBotsPlaceholder.svg">
@@ -19,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div class="findly-dashboard" *ngIf="apps && apps.length">
+    <div class="findly-dashboard" *ngIf="!emptyApp">
       <div class="main-heading d-none" role="doc-introduction">{{'WelcometoFindly' | translate}}</div>
       <div class="header-sec">
           <div class="row m-0 adjust-width">
